--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "projeto da missao de aprendizado do nivel iniciante: Hello Word com Expressjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "start": "node index.js"
   },
   "keywords": [],
   "author": "",
